# vocala

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: .gitkeep  2025_05_22_2142-5b233e4e4577_initial_migration.py
app/: __init__.py  main.py
app/bot/: __init__.py  handlers.py
app/core/: config.py
app/db/: database.py
app/db/models/: __init__.py  example.py  user.py  user_word_progress.py  word.py
app/db/repositories/: __init__.py  base.py  example.py  user.py  user_word_progress.py  word.py
app/llm_interface/: __init__.py  llm_service.py
app/services/: __init__.py  notion_service.py  srs_service.py  user_service.py  word_management_service.py
app/tasks/: __init__.py  celery_app.py  notification_tasks.py  scheduled_tasks.py
tests/: __init__.py  conftest.py  test_llm_service.py
